--- a/UbiGreenJam/Packages/manifest.json
+++ b/UbiGreenJam/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "2.0.9",
+    "com.unity.cinemachine": "3.1.5",
     "com.unity.collab-proxy": "2.10.2",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.2",
@@ -9,7 +10,7 @@
     "com.unity.multiplayer.tools": "2.2.6",
     "com.unity.multiplayer.widgets": "1.0.5",
     "com.unity.postprocessing": "3.5.1",
-    "com.unity.probuilder": "6.0.7",
+    "com.unity.probuilder": "6.0.8",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.services.multiplayer": "1.1.8",
     "com.unity.test-framework": "1.5.1",
